# Compile-Bento4

./: CMakeLists.txt  README.md
.github/workflows/: build_linux-shared.yml  build_linux-static.yml  build_macos-shared.yml  build_macos-static.yml  build_win-shared.yml  build_win-static.yml
include/: Bento4.hpp
src/: Ap4AesBlockCipher.cpp  Bento4.cpp
